# contributor

./: .gitignore  README.md  example.env  pyproject.toml  reviewer-experiments.ipynb
app/: main.py
app/common/: __init__.py
app/indexer/: codebase_chromadb_indexer.py  codebase_indexer.py
app/reviewer/: chains.py  code_review_chain.py  code_review_pipeline.py  model.py
app/reviewer/prompts/: __init__.py  review.txt
azure_devops/: __main__.py  actions.py  api.py  pull_requests.py  register.py  registrar.py  webhook.py
common/: base_pipeline.py
core/: dispatch.py
core/code_review/: base.py  changeset.py  comments.py  lang.py  models.py  review.py  reviewer.py  syntax.py
core/code_review/prompts/: get-methods.txt  review.txt
core/doc_gen/: models.py
core/shared/: models.py  syntax.py
notebooks/: reviewer-experiments.ipynb
platform_integration/: __main__.py  actions.py  base.py  constants.py  pull_requests.py  webhook.py
platform_integration/azure_devops/: __main__.py  api.py  subscribe.py
skills/Review/: model.py  pipeline.py  plugin.py
skills/Review/GetMethods/: config.json  skprompt.txt
skills/Reviewer/: ReviewerPlugin.py  model.py  plugin.py
tests/: Readme.MD  code_review_chain_e2e_tests.py  code_review_e2e_tests.py  codebase_cromadb_indexer_e2e_tests.py  getchangedblocks_e2e_tests.py  getchangedmethods_e2e_tests.py  getmethods_e2e_tests.py  helpers.py  reviewmethod_e2e_tests.py
tests/builders/: model_builder.py  pull_request_builder.py
tests/data/: BasketService-previous.cs  BasketService.cs  full-BasketService-v1.cs  full-BasketService-v2.cs  full-BasketService.cs  full-BookingService.cs  method-UpdateOrderAsync.cs
tests/l2/: codereviewer_l2_tests.py  stubs.py
(+8 files in other folders)
