[tool.poetry]
name = "co-developer"
version = "0.1.0"
description = "Attempt to build a developer that can review code, and put up a PR based on a card, working alongside the other developers"
authors = ["Amal Abeygunawardana <amalabey@gmail.com>"]
readme = "README.md"
packages = [{include = "co_developer"}]

[tool.poetry.dependencies]
python = "^3.9"
langchain = "^0.0.227"
python-dotenv = "^1.0.0"
urllib3 = "^1.26.6"
pydantic = "^1.10.11"
openai = "^0.27.8"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
