[tool.poetry]
authors = ["Microsoft <SK-Support@microsoft.com>"]
description = "Developer that can review code, and put up a PR based on a card, working alongside the other developers "
name = "co-developer"
packages = [{include = "hello_world"}]
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.8"
semantic-kernel = "^0.3.3.dev"
pydantic = "^2.0.3"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
ipykernel = "^6.24.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
